root/iptables.rules
# Generated by iptables-save v1.6.0 on Wed Mar 15 19:50:01 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4:208]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
# ssh
#-A TCP -p tcp --dport 7722 -j ACCEPT
# minidlna
#-A UDP -p udp --dport 1900 -j ACCEPT
#-A TCP -p tcp --dport 8200 -j ACCEPT
# transmission
#-A TCP -p tcp --dport 9091 -j ACCEPT
# cups
#-A TCP -p tcp --dport 631 -j ACCEPT
# tomcat7
#-A TCP -p tcp --dport 8080 -j ACCEPT
# samba
#-A UDP -p udp --dport 137 -j ACCEPT
#-A UDP -p udp --dport 138 -j ACCEPT
#-A TCP -p tcp --dport 139 -j ACCEPT
#-A TCP -p tcp --dport 445 -j ACCEPT
# mqtt mosquitto
#-A TCP -p tcp --dport 8083 -j ACCEPT
# istok-stand
#-A UDP -p udp --dport 2048 -j ACCEPT
# syslog-ng for incoming logs
#-A UDP -p udp --dport 514 -j ACCEPT
COMMIT
# Completed on Wed Mar 15 19:50:01 2017
